--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,14 +9,14 @@ body {
 }
 
 
-/*header {
-    background: rgba(0, 0, 0, 0.6); 
+header {
+    /*background: rgba(0, 0, 0, 0.6); */
     padding: 20px;
     border-radius: 10px;
     margin: 20px auto;
     width: 80%;
     max-width: 900px;
-}*/
+}
 
 header h1 {
     font-size: 42px;
